updating examples to use CDN
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1361 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/custom_skin.html
+++ b/html5/test/examples/custom_skin.html
@@ -22,11 +22,11 @@
             var beelden = new jwplayer.html5(document.getElementById("beelden"));
             beelden.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/beelden/beelden.xml"
             });
         </script>
@@ -40,11 +40,11 @@
             var bekle = new jwplayer.html5(document.getElementById("bekle"));
             bekle.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/bekle/bekle.xml"
             });
         </script>
@@ -58,11 +58,11 @@
             var classic = new jwplayer.html5(document.getElementById("classic"));
             classic.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/classic/classic.xml"
             });
         </script>
@@ -76,11 +76,11 @@
             var five = new jwplayer.html5(document.getElementById("five"));
             five.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/five/five.xml"
             });
         </script>
@@ -94,11 +94,11 @@
             var glow = new jwplayer.html5(document.getElementById("glow"));
             glow.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/glow/glow.xml"
             });
         </script>
@@ -112,11 +112,11 @@
             var grungetape = new jwplayer.html5(document.getElementById("grungetape"));
             grungetape.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/grungetape/grungetape.xml"
             });
         </script>
@@ -130,11 +130,11 @@
             var icecreamsneaka = new jwplayer.html5(document.getElementById("icecreamsneaka"));
             icecreamsneaka.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/icecreamsneaka/icecreamsneaka.xml"
             });
         </script>
@@ -148,11 +148,11 @@
             var kleur = new jwplayer.html5(document.getElementById("kleur"));
             kleur.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/kleur/kleur.xml"
             });
         </script>
@@ -166,11 +166,11 @@
             var lulu = new jwplayer.html5(document.getElementById("lulu"));
             lulu.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/lulu/lulu.xml"
             });
         </script>
@@ -184,11 +184,11 @@
             var modieus = new jwplayer.html5(document.getElementById("modieus"));
             modieus.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/modieus/modieus.xml"
             });
         </script>
@@ -202,11 +202,11 @@
             var nacht = new jwplayer.html5(document.getElementById("nacht"));
             nacht.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/nacht/nacht.xml"
             });
         </script>
@@ -220,11 +220,11 @@
             var playcasso = new jwplayer.html5(document.getElementById("playcasso"));
             playcasso.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/playcasso/playcasso.xml"
             });
         </script>
@@ -238,11 +238,11 @@
             var schoon = new jwplayer.html5(document.getElementById("schoon"));
             schoon.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/schoon/schoon.xml"
             });
         </script>
@@ -256,11 +256,11 @@
             var snel = new jwplayer.html5(document.getElementById("snel"));
             snel.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/snel/snel.xml"
             });
         </script>
@@ -274,11 +274,11 @@
             var stijl = new jwplayer.html5(document.getElementById("stijl"));
             stijl.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/stijl/stijl.xml"
             });
         </script>
@@ -292,11 +292,11 @@
             var stormtrooper = new jwplayer.html5(document.getElementById("stormtrooper"));
             stormtrooper.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/stormtrooper/stormtrooper.xml"
             });
         </script>
