--- a/html5/test/examples/index.html
+++ b/html5/test/examples/index.html
@@ -24,6 +24,7 @@
 				"Multiple players with custom skins": "multiple_customs.html",
 				"Playlists": "playlist.html",
 				"Controlbar": "controlbar.html",
+				"Resize": "resize.html",
 				//"Logo": "logo.html",
 				"API": "api.html"
 				//"Event listeners": "listeners.html"
