--- a/html5/test/examples/logo.html
+++ b/html5/test/examples/logo.html
@@ -18,11 +18,11 @@
             var player = new jwplayer.html5(document.getElementById("player"));
             player.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	logo: {
             		prefix: "http://content.longtailvideo.com/images/",
             		file: "logo_header.png",
