--- a/html5/test/examples/multiple_customs.html
+++ b/html5/test/examples/multiple_customs.html
@@ -29,11 +29,11 @@
             	mute: true,
             	repeat: "single",
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	debug: "console"
             
             });
@@ -54,11 +54,11 @@
             	duration: 45,
             	volume: 50,
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	skin: "../../../../skins/stormtrooper/stormtrooper.xml"
             });
         </script>
