--- a/html5/test/examples/objectembed.html
+++ b/html5/test/examples/objectembed.html
@@ -22,11 +22,11 @@
             var player1 = new jwplayer.html5(document.getElementById("player1"));
             player1.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg"
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
             });
         </script>
         <p>
@@ -37,11 +37,11 @@
             var player2 = new jwplayer.html5(document.getElementById("player2"));
             player2.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg"
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
             });
         </script>
         <h3>HTML code</h3>
