--- a/html5/test/examples/resize.html
+++ b/html5/test/examples/resize.html
@@ -13,8 +13,8 @@
         </div>
         <script type="text/javascript">
         	var player = jwplayer("player").setup({
-            	file: "../../../js/test/files/bunny.mp4",
-            	image: "../../../js/test/files/bunny.jpg",
+            	file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	debug: "console"
             }, [{type:"html5"}]);
 			
