--- a/html5/test/examples/single_mp4.html
+++ b/html5/test/examples/single_mp4.html
@@ -18,8 +18,8 @@
         <script type="text/javascript">
             var player = new jwplayer.html5(document.getElementById("player"));
             player.setup({
-            	file: "../../../js/test/files/bunny.mp4",
-            	image: "../../../js/test/files/bunny.jpg"
+            	file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
             });
         </script>
         <h3>HTML code</h3>
