--- a/html5/test/examples/single_ogg.html
+++ b/html5/test/examples/single_ogg.html
@@ -18,8 +18,8 @@
         <script type="text/javascript">
             var player = new jwplayer.html5(document.getElementById("player"));
             player.setup({
-            	file: "../../../js/test/files/bunny.ogv",
-            	image: "../../../js/test/files/bunny.jpg"
+            	file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
             
             });
         </script>
