--- a/html5/test/examples/videotag.html
+++ b/html5/test/examples/videotag.html
@@ -12,8 +12,8 @@
         <p>
             This parses a &lt;video&gt; tag and sets up a player in it's place for IE9, FF, Chrome, Safari, and Opera. IE < 9 will simply display "HTML5 Player should replace this".
         </p>
-        <video height="270" id="player" poster="../../../js/test/files/bunny.jpg" width="480">
-            <source src="../../../js/test/files/bunny.mp4" type="video/mp4" /><source src="../../../js/test/files/bunny.ogv" type="video/ogg" />
+        <video height="270" id="player" poster="http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg" width="480">
+            <source src="http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4" type="video/mp4" /><source src="http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv" type="video/ogg" />
 			<p>
 				HTML5 Player should replace this.
 			</p>
