--- a/html5/test/examples/controlbar.html
+++ b/html5/test/examples/controlbar.html
@@ -37,31 +37,31 @@
             var player1 = new jwplayer.html5(document.getElementById("player1"));
             player1.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	"controlbar.position": "top"
             });
             var player2 = new jwplayer.html5(document.getElementById("player2"));
             player2.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	"controlbar.position": "over"
             });
             var player3 = new jwplayer.html5(document.getElementById("player3"));
             player3.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             	"controlbar.position": "bottom"
             });
         </script>
