--- a/html5/test/examples/multiple_players.html
+++ b/html5/test/examples/multiple_players.html
@@ -27,19 +27,19 @@
             var player1 = new jwplayer.html5(document.getElementById("player1"));
             player1.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg"
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
             
             });
             var player2 = new jwplayer.html5(document.getElementById("player2"));
             player2.setup({
             	levels: [{
-            		file: "../../../js/test/files/bunny.mp4"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
-            		file: "../../../js/test/files/bunny.ogv"
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
             	image: "../../../js/test/files/oorlogswinter.png"
             
