- Fixing load issue - Fixing controlbar over in fullscreen fade issue
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1364 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/api.html
+++ b/html5/test/examples/api.html
@@ -39,7 +39,8 @@
             	}, {
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+				debug: "console"
             });
 			
 			function callPlayerFunction(functionid, valueid){
