--- a/html5/test/examples/index.html
+++ b/html5/test/examples/index.html
@@ -26,6 +26,7 @@
 				"Controlbar": "controlbar.html",
 				"Resize": "resize.html",
 				//"Logo": "logo.html",
+				"Load":"load.html",
 				"API": "api.html"
 				//"Event listeners": "listeners.html"
 			};
