--- a/html5/test/examples/resize.html
+++ b/html5/test/examples/resize.html
@@ -1,27 +1,34 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-<head> 
-	<title>Resize test</title> 
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+    <head>
+        <title>Resize</title>
         <script type="text/javascript" src="../../../js/bin-debug/jwplayer.js">
         </script>
         <script type="text/javascript" src="../../bin-debug/jwplayer.html5.js">
         </script>
-</head> 
-<body> 
-       <div height="270" width="480" id="player">
-        	HTML5 Player should replace this
+    </head>
+    <body>
+        <h1>Resize</h1>
+		 <p>
+           This page contains a player with multiple sources, so it should play back in IE9, FF, Chrome, Safari, and Opera. IE < 9 will simply display "HTML5 Player should replace this".
+        </p>
+        <div height="270" id="player" width="480">
+        	 HTML5 Player should replace this.
         </div>
         <script type="text/javascript">
-        	var player = jwplayer("player").setup({
-            	file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4",
-            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
-            	debug: "console"
-            }, [{type:"html5"}]);
-			
+            var player = new jwplayer.html5(document.getElementById("player"));
+            player.setup({
+            	levels: [{
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            	}, {
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            	}],
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            });
         </script>
-			<a href="#" onclick="player.resize(340, 280);return false;">small</a>
-			<a href="#" onclick="player.resize(640, 480);return false;">medium</a>
-			<a href="#" onclick="player.resize(720, 640);return false;">large</a>
-
-</body> 
-</html> 
+		<a href="#" onclick="player.resize(340, 280);return false;">small</a>
+		<a href="#" onclick="player.resize(640, 480);return false;">medium</a>
+		<a href="#" onclick="player.resize(720, 640);return false;">large</a>
+        <h3>HTML code</h3>
+    </body>
+</html>
