- Controlbar position no longer starts at 0 when fading in while in fullscreen - Controlbar displays time 00:00 on idle - Keyboard controls in fullscreen - Controlbar reappears in fullscreen for FF - Display clears error on load - Video media provider handles stop() correctly (ignores subsequent pause) - YouTube appears on top of controlbar in Chrome
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1366 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/load.html
+++ b/html5/test/examples/load.html
@@ -66,7 +66,7 @@
         <a href="#" onclick="load('http://content.bitsontherun.com/videos/guYqV1AB-486405.mp4');return false;">File (mp4)</a>
         <a href="#" onclick="load('http://content.bitsontherun.com/videos/guYqV1AB-604476.ogv');return false;">File (ogv)</a>
         <a href="#" onclick="load(playlistItem);return false;">Playlist Item</a>
-        <a href="#" onclick="load(playlist);return false;">Playlist Item</a>
+        <a href="#" onclick="load(playlist);return false;">3-item playlist</a>
         <h3>HTML code</h3>
     </body>
 </html>
