Prevetning fullscreen in webkit before startup
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1367 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/custom_skin.html
+++ b/html5/test/examples/custom_skin.html
@@ -211,7 +211,7 @@
             });
         </script>
         <p>
-            PSlaycasso
+            Playcasso
         </p>
         <div height="270" id="playcasso" width="480">
             HTML5 Player should replace this
