- Fixing iPad API disconnect
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1369 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/index.html
+++ b/html5/test/examples/index.html
@@ -27,7 +27,8 @@
 				"Resize": "resize.html",
 				//"Logo": "logo.html",
 				"Load":"load.html",
-				"API": "api.html"
+				"API": "api.html",
+				"Chromeless": "chromeless.html"
 				//"Event listeners": "listeners.html"
 			};
 			for (var example in examples){
