- Fixing logo - Fixing build script
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1373 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/index.html
+++ b/html5/test/examples/index.html
@@ -25,7 +25,7 @@
 				"Playlists": "playlist.html",
 				"Controlbar": "controlbar.html",
 				"Resize": "resize.html",
-				//"Logo": "logo.html",
+				"Logo": "logo.html",
 				"Load":"load.html",
 				"API": "api.html",
 				"Chromeless": "chromeless.html"
