--- a/html5/test/examples/logo.html
+++ b/html5/test/examples/logo.html
@@ -23,19 +23,9 @@
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
-            	logo: {
-            		prefix: "http://content.longtailvideo.com/images/",
-            		file: "logo_header.png",
-            		link: "http://www.longtailvideo.com/",
-            		margin: 20,
-            		out: 0.25,
-            		over: 0.5,
-            		timeout: 3,
-            		hide: "false",
-            		position: "top-right",
-            		width: 93,
-            		height: 30
-            	}
+            	'logo.file': "http://www.dumbview.com/images/dv.jpg",
+            	'logo.position': "top-right",
+            	'logo.hide': false
             });
         </script>
         <h3>HTML code</h3>
