- Logo doesn't appear if file isn't specified [ticket:1068]  - Plugins block doesn't kill HTML5 player [ticket:1069]  - Console will not log if console is not available [ticket:1070]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1379 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/index.html
+++ b/html5/test/examples/index.html
@@ -28,7 +28,8 @@
 				"Logo": "logo.html",
 				"Load":"load.html",
 				"API": "api.html",
-				"Chromeless": "chromeless.html"
+				"Chromeless": "chromeless.html",
+				"Plugins": "plugins.html"
 				//"Event listeners": "listeners.html"
 			};
 			for (var example in examples){
