--- a/html5/test/examples/logo.html
+++ b/html5/test/examples/logo.html
@@ -12,11 +12,48 @@
         <p>
             This test the various configuration options for the logo. Video should play natively on FF, Chrome, Safari, and Opera but will fail in IE.
         </p>
-        <div height="270" id="player" width="480">
+		<h2>
+			Default logo
+		</h2>
+		<div height="270" id="player1" width="480">
         </div>
         <script type="text/javascript">
-            var player = new jwplayer.html5(document.getElementById("player"));
-            player.setup({
+            var player1 = new jwplayer.html5(document.getElementById("player1"));
+            player1.setup({
+            	levels: [{
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            	}, {
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            	}],
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"            	
+            });
+        </script>
+		<h2>
+			No logo
+		</h2>		
+        <div height="270" id="player2" width="480">
+        </div>
+        <script type="text/javascript">
+            var player2 = new jwplayer.html5(document.getElementById("player2"));
+            player2.setup({
+            	levels: [{
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            	}, {
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            	}],
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            	'logo.file': "",
+            	'logo.prefix': ""
+            });
+        </script>
+		<h2>
+			Modified logo, top right
+		</h2>
+		<div height="270" id="player3" width="480">
+        </div>
+        <script type="text/javascript">
+            var player3 = new jwplayer.html5(document.getElementById("player3"));
+            player3.setup({
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
