* Stop is ignored when player is idle. * Display hides poster on load error * Logo is not visible by default * Errors that do not effect the <video> tag are ignored * Extra checking for existence of console logging
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1382 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/index.html
+++ b/html5/test/examples/index.html
@@ -29,7 +29,8 @@
 				"Load":"load.html",
 				"API": "api.html",
 				"Chromeless": "chromeless.html",
-				"Plugins": "plugins.html"
+				"Plugins": "plugins.html",
+				"Firefox bug": "load.html#"
 				//"Event listeners": "listeners.html"
 			};
 			for (var example in examples){
