--- a/html5/test/examples/load.html
+++ b/html5/test/examples/load.html
@@ -23,8 +23,7 @@
             	}, {
             		file: "../../../js/test/files/bunny.ogv"
             	}],
-            	image: "../../../js/test/files/bunny.jpg",
-				debug: "console"
+            	image: "../../../js/test/files/bunny.jpg"
             });
             
             var playlistItem = {
