- Fixing path resolver and adding test cases
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1393 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/index.html
+++ b/html5/test/examples/index.html
@@ -14,6 +14,9 @@
 				"Video tag embed": "videotag.html",
 				"No file specified": "nofile.html",
 				"Invalid file path specified": "badfile.html",
+				"Absolute file path": "filepathsabsolute.html",
+				"Root file path": "filepathsroot.html",
+				"Relative file path": "filepathsrelative.html",
 				"Invalid skin path specified": "badskin.html",
 				"Single MP4": "single_mp4.html",
 				"Single OGV": "single_ogg.html",
