Updating test page
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1398 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/js/test/fallback.html
+++ b/js/test/fallback.html
@@ -3,7 +3,7 @@
 <title>JWPlayer HTML5 Failover Test</title> 
  
 <script type="text/javascript" src="../bin-debug/jwplayer.js"></script> 
-<script type="text/javascript" src="/trunk/html5/jwplayer.html5.min.js"></script> 
+<script type="text/javascript" src="../../html5/jwplayer.html5.min.js"></script> 
  
 </head> 
  
