--- a/html5/test/examples/custom_skin.html
+++ b/html5/test/examples/custom_skin.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Custom skin</title>
-        <script type="text/javascript" src="../../../../js/bin-debug/jwplayer.js">
+        <script type="text/javascript" src="../../../js/bin-debug/jwplayer.js">
         </script>
         <script type="text/javascript" src="../../bin-debug/jwplayer.html5.js">
         </script>
