Adding failover example
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1407 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/index.html
+++ b/html5/test/examples/index.html
@@ -33,7 +33,8 @@
 				"API": "api.html",
 				"Chromeless": "chromeless.html",
 				"Plugins": "plugins.html",
-				"Firefox bug": "load.html#"
+				"Firefox bug": "load.html#",
+				"FLV failover": "failover.html"
 				//"Event listeners": "listeners.html"
 			};
 			for (var example in examples){
