- HTML5 player and embedder are now compatible with MooTools, Prototype, ext-core, Dojo, and Scriptaculous [ticket:1082]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1415 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -34,7 +34,15 @@
 				"Chromeless": "chromeless.html",
 				"Plugins": "plugins.html",
 				"Firefox bug": "load.html#",
-				"FLV failover": "failover.html"
+				"FLV failover": "failover.html",
+				"Dojo": "libraries/dojo.html",
+				"Ext Core": "libraries/ext-core.html",
+				"jQuery": "libraries/jquery.html",
+				"MooTools": "libraries/mootools.html",
+				"Prototype": "libraries/prototype.html",
+				"Scriptaculous": "libraries/scriptaculous.html",
+				"SWFObject": "libraries/swfobject.html",
+				"YUI": "libraries/yui.html",
 				//"Event listeners": "listeners.html"
 			};
 			for (var example in examples){
