- HTML5 player now compatibile with social media plugins + plugins block [ticket:1069]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1417 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -43,6 +43,7 @@
 				"Scriptaculous": "libraries/scriptaculous.html",
 				"SWFObject": "libraries/swfobject.html",
 				"YUI": "libraries/yui.html",
+				"Social media": "socialmedia.html"
 				//"Event listeners": "listeners.html"
 			};
 			for (var example in examples){
