--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -43,7 +43,8 @@
 				"Scriptaculous": "libraries/scriptaculous.html",
 				"SWFObject": "libraries/swfobject.html",
 				"YUI": "libraries/yui.html",
-				"Social media": "socialmedia.html"
+				"Social media": "socialmedia.html",
+				"Apple (Cupertino) Streaming": "m3u8.html"
 				//"Event listeners": "listeners.html"
 			};
 			for (var example in examples){
