- Skin loading will fall back to default skin if responseXML is not valid [ticket:1108]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1421 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -44,7 +44,8 @@
 				"SWFObject": "libraries/swfobject.html",
 				"YUI": "libraries/yui.html",
 				"Social media": "socialmedia.html",
-				"Apple (Cupertino) Streaming": "m3u8.html"
+				"Apple (Cupertino) Streaming": "m3u8.html",
+				"Loading HTML instead of a skin": "htmlskin.html"
 				//"Event listeners": "listeners.html"
 			};
 			for (var example in examples){
