--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -45,7 +45,9 @@
 				"YUI": "libraries/yui.html",
 				"Social media": "socialmedia.html",
 				"Apple (Cupertino) Streaming": "m3u8.html",
-				"Loading HTML instead of a skin": "htmlskin.html"
+				"Loading HTML instead of a skin": "htmlskin.html",
+				"Skin redirect": "skinredirect.html",
+				"Extensions": "extensions.html"
 				//"Event listeners": "listeners.html"
 			};
 			for (var example in examples){
